feat: poll 결과 상세 조회
